<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="PRIVACY_POLICY_TITLE">Privacy Policy</string>
    <string name="PRIVACY_POLICY_CONTENT">
        By using this Application, you agree with Terms of Conditions, Cookie Policy and Privacy Policy and agree to have your personal data, behavior transferred and processed outside the EU.
    </string>
    <string name="ACCEPT">ACCEPT</string>
    <string name="DECLINE">DECLINE</string>

    <string name="SHARE_APP_TEXT">Get %1$s application on Google Play Store \n %2$s</string>

    <string name="EXIT_TITLE">Exit App</string>
    <string name="EXIT_MESSAGE">Are you sure you want to leave the application?</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
</resources>